# hello-eth

./: Cargo.toml
examples/: revm.rs  simulate_position.rs  swap.rs
src/: lib.rs  prelude.rs
src/abi/: erc20.rs  mod.rs  swap_router.rs
src/abi/uniswap/: mod.rs  nft_position.rs
src/abi/uniswap/factory/: v2.rs  v3.rs
src/abi/uniswap/pool/: v2.rs  v3.rs
src/defi/: mod.rs
src/defi/amm/: consts.rs  mod.rs  readme.md
src/defi/amm/uniswap/: mod.rs  router.rs
src/defi/amm/uniswap/v2/: mod.rs
src/defi/amm/uniswap/v3/: fee_math.rs  lp_provider.rs  mod.rs
src/defi/currency/: erc20.rs  mod.rs  native.rs
src/defi/utils/: chain_link.rs  common_addr.rs  mod.rs
src/revm_utils/: dummy_account.rs  mod.rs  utils.rs
src/revm_utils/fork_db/: fork_db.rs  fork_factory.rs  global_backend.rs  mod.rs  readme.md
src/revm_utils/inspectors/: access_list.rs
src/revm_utils/simulate/: mod.rs
src/utils/: mod.rs
src/utils/batch_request/: mod.rs
src/utils/batch_request/abi/: GetErc20Balance.json
src/utils/logs/: events.rs  mod.rs  query.rs
