[package]
name = "hello-eth"
version = "0.1.0"
edition = "2021"
description = "Collection of modules based on Alloy-rs to interact with Ethereum and EVM compatible chains"

[dependencies]
# Alloy dependencies
alloy-primitives = "0.8.0"
alloy-signer = "0.3.1"
alloy-signer-local = "0.3.1"
alloy-contract = "0.3.1"
alloy-provider = {version = " 0.3.1", features = ["ws"]}
alloy-transport = "0.3.1"
alloy-pubsub = "0.2.0"
alloy-sol-types = "0.8.0"
alloy-rpc-types = "0.3.1"
alloy-chains = "0.1.29"
alloy-network = "0.3.1"

# REVM
revm = { version = "14.0.0", features = [
    "std",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_eip3607",
    "optional_gas_refund",
] }

uniswap_v3_math = { git = "https://github.com/0xKitsune/uniswap-v3-math.git", branch = "main" }

# Async
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.5"
futures-util = "0.3.30"


# Error handling
anyhow = "1.0.44"
thiserror = "1.0.37"
eyre = "0.6.8"


#Misc
bigdecimal = "0.4.5"
serde = "1.0.204"
serde_json = "1.0.121"
tracing = "0.1.40"


[[bin]]
name = "swap"
path = "examples/swap.rs"


[[bin]]
name = "simulate-position"
path = "examples/simulate_position.rs"

[[bin]]
name = "revm"
path = "examples/revm.rs"